# app

./: .gitignore  .prettierignore  Cargo.toml  THIRD_PARTY_LICENSES.md  cspell.json  eslint.config.js  package-lock.json  package.json
.github/workflows/: publish.yml
overlay/: .env.development  package-lock.json  package.json  vite.config.js
overlay/src/: main.ts
overlay/src/styles/: app.css
overlay/src/utils/: async.ts
overlay/src/vtftk/: api.ts  events.ts  types.ts
overlay/src/vtube-studio/: flinch.ts  physics.ts  playSound.ts  throw-item.ts
scripting/: package-lock.json
scripting/src/: core.ts  vtftk.ts
scripts/: generate-licenses.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  overlay.rs  tray.rs
src-tauri/src/commands/: calibration.rs  commands.rs  data.rs  events.rs  items.rs  sounds.rs  test.rs  twitch.rs
src-tauri/src/database/: helpers.rs  mod.rs
src-tauri/src/database/entity/: app_data.rs  chat_history.rs  command_alias.rs  command_execution.rs  command_executions.rs  command_log.rs  commands.rs  event_execution.rs  event_executions.rs  event_log.rs  events.rs  items.rs  key_value.rs  mod.rs  model_data.rs  secrets.rs  shared.rs  sounds.rs
src-tauri/src/database/migration/: m20250216_140137_create_secrets_table.rs  mod.rs
src-tauri/src/database/migrations/: m20241208_060123_create_items_table.rs  m20241208_060138_create_events_table.rs  m20241208_060144_create_sounds_table.rs  m20241208_060200_create_commands_table.rs  m20241208_060230_create_model_data_table.rs  m20241208_063859_create_items_sounds_junction_table.rs  m20241210_082256_create_event_executions_table.rs  m20241210_082316_create_command_executions_table.rs  m20241211_102725_seed_defaults.rs  m20241212_114700_create_key_value_table.rs  m20241214_080902_create_command_logs_table.rs  m20241227_110419_create_event_logs_table.rs  m20250104_071851_create_app_data_table.rs  m20250124_082703_create_chat_history_table.rs  m20250209_101257_create_command_aliases_table.rs  m20250216_140137_create_secrets_table.rs  mod.rs
src-tauri/src/database/migrations/sql/: m20241208_060123_create_items_table.sql  m20241208_060138_create_events_table.sql  m20241208_060144_create_sounds_table.sql  m20241208_060200_create_commands_table.sql  m20241208_060230_create_model_data_table.sql  m20241208_063859_create_items_sounds_junction_table.sql  m20241210_082256_create_event_executions_table.sql  m20241210_082316_create_command_executions_table.sql  m20241211_102725_seed_defaults.sql  m20241212_114700_create_key_value_table.sql  m20241214_080902_create_command_logs_table.sql  m20241227_110419_create_event_logs_table.sql  m20250104_071851_create_app_data_table.sql  m20250124_082703_create_chat_history_table.sql  m20250209_101257_create_command_aliases_table.sql  m20250216_140137_create_secrets_table.sql
src-tauri/src/events/: matching.rs  mod.rs  outcome.rs  processing.rs  scheduler.rs
src-tauri/src/export/: mod.rs
src-tauri/src/http/: mod.rs  models.rs
src-tauri/src/http/models/: mod.rs
src-tauri/src/http/routes/: calibration.rs  data.rs  events.rs  items.rs  mod.rs  oauth.rs  overlay.rs  server.rs  sounds.rs
src-tauri/src/overlay/: mod.rs
src-tauri/src/script/: module_loader.rs  runtime.rs
src-tauri/src/script/ops/: core.rs  http.rs  kv.rs  logging.rs  twitch.rs  vtftk.rs
src-tauri/src/twitch/: manager.rs  mod.rs  websocket.rs
src/lib/api/: calibration.ts  commandModel.ts  data.ts  eventModel.ts  itemModel.ts  runtimeAppData.ts  soundModel.ts  twitch.ts  types.ts
src/lib/components/: AppToaster.svelte  HTabs.svelte  ImportCommands.svelte  ImportEvents.svelte  InternalServerProvider.svelte  ServerProvider.svelte  VirtualOrderableGrid.svelte
src/lib/components/form/: FormBoundCheckbox.svelte  FormErrorLabel.svelte  FormNumberInput.svelte  FormSelect.svelte  FormSlider.svelte  FormTextInput.svelte  ImageUpload.svelte  SoundUpload.svelte
src/lib/components/input/: EnabledSwitch.svelte  Slider.svelte
src/lib/components/nav/: NavButton.svelte  Navigation.svelte  StatusDetails.svelte
src/lib/components/popover/: PopoverButton.svelte
src/lib/components/scripts/: MonacoEditor.svelte  TemplateEditor.svelte  monaco.ts
src/lib/components/sounds/: SelectedSounds.svelte  SoundPicker.svelte
src/lib/components/throwable/: ThrowablePicker.svelte
src/lib/components/update/: UpdateNotification.svelte
src/lib/schemas/: event.ts  item.ts
src/lib/sections/: AppDataProvider.svelte
src/lib/sections/calibration/: Calibration.svelte
src/lib/sections/commands/: CommandExecutions.svelte  CommandForm.svelte  CommandItem.svelte
src/lib/sections/events/: EventExecutions.svelte  EventForm.svelte  EventItem.svelte  HotkeySelect.svelte  RequiredRoleSelect.svelte  SoundSelect.svelte  ThrowableDataTypeSelect.svelte
src/lib/sections/executions/: ExecutionMetadataDialog.svelte  ExecutionsTable.svelte
src/lib/sections/home/: OBSHomeCard.svelte  TwitchHomeCard.svelte  VTubeStudioCard.svelte
src/lib/styles/: global.css
src/lib/utils/: browser.ts  eventTestData.ts  url.ts
src/routes/: +layout.svelte
src/routes/commands/: +page.svelte
src/routes/events/: +page.svelte
src/routes/sounds/: +page.svelte
src/routes/throwables/: +page.svelte
types/: appData.ts  dataV2.ts
(+11 files in other folders)
