[package]
name = "vtftk"
version = "0.2.1"
description = "A Tauri App"
edition = "2021"
license = "MIT"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/vtftk/app"

[lib]
name = "vtftk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# Deno core for compiling runtime snapshot
deno_core = "0.351.0"

[dependencies]
# Tauri for frontend UI and its plugins
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2.2.0"
tauri-plugin-updater = "2"

# Twitch API for working with twitch
twitch_api = { version = "0.7.0", features = [
    "helix",
    "eventsub",
    "all",
    "reqwest",
] }

# Websocket client for twitch event sub
tokio-tungstenite = { version = "0.24.0", features = [
    "rustls-tls-native-roots",
] }

# Serialization and JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.12.0"

# HTTP
reqwest = { version = "0.12.9", default-features = false, features = [
    "charset",
    "http2",
    "rustls-tls",
] }

# HTTP server
axum = { version = "0.7.9", features = ["ws", "macros"] }
tower-http = { version = "0.6.2", features = ["cors"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Asynchronous runtime and utilities
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
tokio-stream = { version = "0.1.16", features = ["full"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Mime type guessing for file serving
mime_guess = "2"

# Logging
log = "0.4"
env_logger = "0.11"

# JavaScript runtime
deno_core = "0.351.0"
deno_error = "0.6.1"

# Date & Time
chrono = { version = "0.4.39", features = ["serde"] }
async-trait = "0.1.86"
strum = { version = "0.27.1", features = ["derive"] }
itertools = "0.14.0"
parking_lot = "0.12.3"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

# File dialogs for file picker prompts
rfd = { version = "0.15.3", default-features = false, features = [
    "tokio",
] }

[dependencies.sqlx]
version = "0.8.2"
features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "derive",
    "uuid",
    "chrono",
    "json",
]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
