[package]
name = "vtftk"
version = "0.2.2"
description = "App for VTubers to create interactive experiences with their viewers"
edition = "2024"
license = "MIT"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/vtftk/app"

[lib]
name = "vtftk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }
# Deno core for compiling runtime snapshot
deno_core = "0.371.0"

[dependencies]
# Tauri for frontend UI and its plugins
tauri = { version = "2.5.2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2.3.6"
tauri-plugin-updater = "2.9.0"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-opener = "2.5.2"

# Twitch API for working with twitch
twitch_api = { version = "0.7.2", features = [
    "helix",
    "eventsub",
    "all",
    "reqwest",
] }

# Websocket client for twitch event sub
tokio-tungstenite = { version = "0.28.0", features = [
    "rustls-tls-native-roots",
] }

# Serialization and JSON
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.16.1"

# HTTP
reqwest = { version = "0.12.24", default-features = false, features = [
    "charset",
    "http2",
    "rustls-tls",
] }

# HTTP server
axum = { version = "0.8.7", features = ["ws", "macros"] }
tower-http = { version = "0.6.7", features = ["cors"] }

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Asynchronous runtime and utilities
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
futures = "0.3.31"

# UUID
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# Mime type guessing for file serving
mime_guess = "2.0.5"

# Logging
log = "0.4.28"
env_logger = "0.11.8"

# JavaScript runtime
deno_core = "0.371.0"
deno_error = "0.7.1"

# Date & Time
chrono = { version = "0.4.42", features = ["serde"] }

# String enums
strum = { version = "0.27.2", features = ["derive"] }

# Iterator utils
itertools = "0.14.0"

# Fast blocking locks
parking_lot = "0.12.5"

[dependencies.sqlx]
version = "0.8.6"
features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "derive",
    "uuid",
    "chrono",
    "json",
]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
